--- a/plugins/XRD/IP.ui
+++ b/plugins/XRD/IP.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>335</width>
-    <height>34</height>
+    <width>380</width>
+    <height>48</height>
    </rect>
   </property>
   <property name="font">
@@ -18,7 +18,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,0,0,0,0,0,0">
+  <layout class="QHBoxLayout" name="horizontalLayout">
    <property name="leftMargin">
     <number>4</number>
    </property>
@@ -34,7 +34,7 @@
    <item>
     <widget class="QDoubleSpinBox" name="angle">
      <property name="toolTip">
-      <string>Fringes orientation</string>
+      <string>Rotation angle</string>
      </property>
      <property name="suffix">
       <string>˚</string>
@@ -52,6 +52,9 @@
    </item>
    <item>
     <widget class="QToolButton" name="flipLR">
+     <property name="toolTip">
+      <string>Flip Left/Right</string>
+     </property>
      <property name="text">
       <string>...</string>
      </property>
@@ -69,6 +72,9 @@
    </item>
    <item>
     <widget class="QToolButton" name="flipUD">
+     <property name="toolTip">
+      <string>Flip Up/Down</string>
+     </property>
      <property name="text">
       <string>...</string>
      </property>
@@ -86,6 +92,9 @@
    </item>
    <item>
     <widget class="QToolButton" name="transpose">
+     <property name="toolTip">
+      <string>Transpose</string>
+     </property>
      <property name="text">
       <string>...</string>
      </property>
@@ -111,7 +120,7 @@
    <item>
     <widget class="QToolButton" name="rectROI">
      <property name="toolTip">
-      <string>rectangle parameter window</string>
+      <string>Crop region window</string>
      </property>
      <property name="text">
       <string>...</string>
@@ -124,12 +133,34 @@
    </item>
    <item>
     <widget class="QToolButton" name="saveImage">
+     <property name="toolTip">
+      <string>Save cropped image</string>
+     </property>
      <property name="text">
       <string>...</string>
      </property>
      <property name="icon">
       <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
        <normaloff>:/icons/save.png</normaloff>:/icons/save.png</iconset>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QToolButton" name="crop">
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="toolTip">
+      <string>Show cropped image</string>
+     </property>
+     <property name="text">
+      <string>Show</string>
+     </property>
+     <property name="icon">
+      <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+       <normaloff>:/icons/eye.png</normaloff>:/icons/eye.png</iconset>
      </property>
     </widget>
    </item>
@@ -147,6 +178,14 @@
    </property>
   </action>
  </widget>
+ <tabstops>
+  <tabstop>angle</tabstop>
+  <tabstop>flipLR</tabstop>
+  <tabstop>flipUD</tabstop>
+  <tabstop>transpose</tabstop>
+  <tabstop>rectROI</tabstop>
+  <tabstop>saveImage</tabstop>
+ </tabstops>
  <resources>
   <include location="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc"/>
  </resources>
