--- a/plugins/XRD/IP.ui
+++ b/plugins/XRD/IP.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>380</width>
-    <height>48</height>
+    <width>391</width>
+    <height>104</height>
    </rect>
   </property>
   <property name="font">
@@ -18,7 +18,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout">
    <property name="leftMargin">
     <number>4</number>
    </property>
@@ -32,136 +32,206 @@
     <number>4</number>
    </property>
    <item>
-    <widget class="QDoubleSpinBox" name="angle">
-     <property name="toolTip">
-      <string>Rotation angle</string>
+    <widget class="QGroupBox" name="groupBox">
+     <property name="title">
+      <string>Source</string>
      </property>
-     <property name="suffix">
-      <string>˚</string>
-     </property>
-     <property name="minimum">
-      <double>-360.000000000000000</double>
-     </property>
-     <property name="maximum">
-      <double>360.000000000000000</double>
-     </property>
-     <property name="neutrinoSave" stdset="0">
-      <bool>true</bool>
-     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="1,0">
+      <property name="leftMargin">
+       <number>4</number>
+      </property>
+      <property name="topMargin">
+       <number>4</number>
+      </property>
+      <property name="rightMargin">
+       <number>4</number>
+      </property>
+      <property name="bottomMargin">
+       <number>4</number>
+      </property>
+      <item>
+       <widget class="QComboBox" name="image">
+        <property name="font">
+         <font>
+          <pointsize>10</pointsize>
+         </font>
+        </property>
+        <property name="neutrinoImage" stdset="0">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="source">
+        <property name="font">
+         <font>
+          <pointsize>10</pointsize>
+         </font>
+        </property>
+        <property name="toolTip">
+         <string>Show source image</string>
+        </property>
+        <property name="text">
+         <string>Show</string>
+        </property>
+        <property name="icon">
+         <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+          <normaloff>:/icons/eye.png</normaloff>:/icons/eye.png</iconset>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
    <item>
-    <widget class="QToolButton" name="flipLR">
-     <property name="toolTip">
-      <string>Flip Left/Right</string>
-     </property>
-     <property name="text">
-      <string>...</string>
-     </property>
-     <property name="icon">
-      <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
-       <normaloff>:/icons/flipLeftRight.png</normaloff>:/icons/flipLeftRight.png</iconset>
-     </property>
-     <property name="checkable">
-      <bool>true</bool>
-     </property>
-     <property name="neutrinoSave" stdset="0">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QToolButton" name="flipUD">
-     <property name="toolTip">
-      <string>Flip Up/Down</string>
-     </property>
-     <property name="text">
-      <string>...</string>
-     </property>
-     <property name="icon">
-      <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
-       <normaloff>:/icons/flipUpDown.png</normaloff>:/icons/flipUpDown.png</iconset>
-     </property>
-     <property name="checkable">
-      <bool>true</bool>
-     </property>
-     <property name="neutrinoSave" stdset="0">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QToolButton" name="transpose">
-     <property name="toolTip">
-      <string>Transpose</string>
-     </property>
-     <property name="text">
-      <string>...</string>
-     </property>
-     <property name="icon">
-      <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
-       <normaloff>:/icons/transpose.png</normaloff>:/icons/transpose.png</iconset>
-     </property>
-     <property name="checkable">
-      <bool>true</bool>
-     </property>
-     <property name="neutrinoSave" stdset="0">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="Line" name="line">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QToolButton" name="rectROI">
-     <property name="toolTip">
-      <string>Crop region window</string>
-     </property>
-     <property name="text">
-      <string>...</string>
-     </property>
-     <property name="icon">
-      <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
-       <normaloff>:/icons/rect.png</normaloff>:/icons/rect.png</iconset>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QToolButton" name="saveImage">
-     <property name="toolTip">
-      <string>Save cropped image</string>
-     </property>
-     <property name="text">
-      <string>...</string>
-     </property>
-     <property name="icon">
-      <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
-       <normaloff>:/icons/save.png</normaloff>:/icons/save.png</iconset>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QToolButton" name="crop">
-     <property name="font">
-      <font>
-       <pointsize>10</pointsize>
-      </font>
-     </property>
-     <property name="toolTip">
-      <string>Show cropped image</string>
-     </property>
-     <property name="text">
-      <string>Show</string>
-     </property>
-     <property name="icon">
-      <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
-       <normaloff>:/icons/eye.png</normaloff>:/icons/eye.png</iconset>
-     </property>
+    <widget class="QWidget" name="widget" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="QDoubleSpinBox" name="angle">
+        <property name="toolTip">
+         <string>Rotation angle</string>
+        </property>
+        <property name="suffix">
+         <string>˚</string>
+        </property>
+        <property name="minimum">
+         <double>-360.000000000000000</double>
+        </property>
+        <property name="maximum">
+         <double>360.000000000000000</double>
+        </property>
+        <property name="neutrinoSave" stdset="0">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="flipLR">
+        <property name="toolTip">
+         <string>Flip Left/Right</string>
+        </property>
+        <property name="text">
+         <string>...</string>
+        </property>
+        <property name="icon">
+         <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+          <normaloff>:/icons/flipLeftRight.png</normaloff>:/icons/flipLeftRight.png</iconset>
+        </property>
+        <property name="checkable">
+         <bool>true</bool>
+        </property>
+        <property name="neutrinoSave" stdset="0">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="flipUD">
+        <property name="toolTip">
+         <string>Flip Up/Down</string>
+        </property>
+        <property name="text">
+         <string>...</string>
+        </property>
+        <property name="icon">
+         <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+          <normaloff>:/icons/flipUpDown.png</normaloff>:/icons/flipUpDown.png</iconset>
+        </property>
+        <property name="checkable">
+         <bool>true</bool>
+        </property>
+        <property name="neutrinoSave" stdset="0">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="transpose">
+        <property name="toolTip">
+         <string>Transpose</string>
+        </property>
+        <property name="text">
+         <string>...</string>
+        </property>
+        <property name="icon">
+         <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+          <normaloff>:/icons/transpose.png</normaloff>:/icons/transpose.png</iconset>
+        </property>
+        <property name="checkable">
+         <bool>true</bool>
+        </property>
+        <property name="neutrinoSave" stdset="0">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="Line" name="line">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="rectROI">
+        <property name="toolTip">
+         <string>Crop region window</string>
+        </property>
+        <property name="text">
+         <string>...</string>
+        </property>
+        <property name="icon">
+         <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+          <normaloff>:/icons/rect.png</normaloff>:/icons/rect.png</iconset>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="saveImage">
+        <property name="toolTip">
+         <string>Save cropped image</string>
+        </property>
+        <property name="text">
+         <string>...</string>
+        </property>
+        <property name="icon">
+         <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+          <normaloff>:/icons/save.png</normaloff>:/icons/save.png</iconset>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="crop">
+        <property name="font">
+         <font>
+          <pointsize>10</pointsize>
+         </font>
+        </property>
+        <property name="toolTip">
+         <string>Show cropped image</string>
+        </property>
+        <property name="text">
+         <string>Show</string>
+        </property>
+        <property name="icon">
+         <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+          <normaloff>:/icons/eye.png</normaloff>:/icons/eye.png</iconset>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
   </layout>
@@ -180,7 +250,6 @@
  </widget>
  <tabstops>
   <tabstop>angle</tabstop>
-  <tabstop>flipLR</tabstop>
   <tabstop>flipUD</tabstop>
   <tabstop>transpose</tabstop>
   <tabstop>rectROI</tabstop>
