--- a/plugins/Visar/VisarSettings.ui
+++ b/plugins/Visar/VisarSettings.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Visar2</class>
- <widget class="QWidget" name="Visar2">
+ <class>VisarSettings</class>
+ <widget class="QWidget" name="VisarSettings">
   <property name="geometry">
    <rect>
     <x>0</x>
