--- a/plugins/Visar/VisarSettings.ui
+++ b/plugins/Visar/VisarSettings.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>760</width>
-    <height>494</height>
+    <width>741</width>
+    <height>425</height>
    </rect>
   </property>
   <property name="font">
@@ -93,7 +93,7 @@
                <string>...</string>
               </property>
               <property name="icon">
-               <iconset resource="Visar.qrc">
+               <iconset resource="../Ghost_fringes/GhostFringes.qrc">
                 <normaloff>:/icons/refresh2.png</normaloff>:/icons/refresh2.png</iconset>
               </property>
               <property name="neutrinoSave" stdset="0">
@@ -212,18 +212,18 @@
               <property name="title">
                <string>Reference and Shot</string>
               </property>
-              <layout class="QGridLayout" name="gridLayout" columnstretch="1,1,0,0,0">
+              <layout class="QGridLayout" name="gridLayout" columnstretch="1,1,0,0">
                <property name="leftMargin">
-                <number>2</number>
+                <number>4</number>
                </property>
                <property name="topMargin">
-                <number>2</number>
+                <number>4</number>
                </property>
                <property name="rightMargin">
-                <number>2</number>
+                <number>4</number>
                </property>
                <property name="bottomMargin">
-                <number>2</number>
+                <number>4</number>
                </property>
                <item row="0" column="0">
                 <widget class="QComboBox" name="refImage">
@@ -245,7 +245,7 @@
                  </property>
                 </widget>
                </item>
-               <item row="0" column="3">
+               <item row="0" column="2">
                 <widget class="QCheckBox" name="DeghostCheck">
                  <property name="toolTip">
                   <string>Completely checked to remove ghost fringes. Partially checked box will show the image.</string>
@@ -261,7 +261,7 @@
                  </property>
                 </widget>
                </item>
-               <item row="0" column="4">
+               <item row="0" column="3">
                 <widget class="QToolButton" name="Deghost">
                  <property name="text">
                   <string>...</string>
@@ -273,6 +273,91 @@
                  <property name="checkable">
                   <bool>false</bool>
                  </property>
+                </widget>
+               </item>
+               <item row="1" column="0" colspan="4">
+                <widget class="QWidget" name="widget_5" native="true">
+                 <property name="font">
+                  <font>
+                   <pointsize>9</pointsize>
+                  </font>
+                 </property>
+                 <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="0,1,0,0,0,0,0">
+                  <property name="leftMargin">
+                   <number>0</number>
+                  </property>
+                  <property name="topMargin">
+                   <number>0</number>
+                  </property>
+                  <property name="rightMargin">
+                   <number>0</number>
+                  </property>
+                  <property name="bottomMargin">
+                   <number>0</number>
+                  </property>
+                  <item>
+                   <widget class="QLabel" name="label">
+                    <property name="text">
+                     <string>Dir:</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QLineEdit" name="globDir">
+                    <property name="toolTip">
+                     <string>Directory containing all the shots</string>
+                    </property>
+                    <property name="neutrinoSave" stdset="0">
+                     <bool>true</bool>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QLabel" name="label_2">
+                    <property name="text">
+                     <string>Ref:</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QLineEdit" name="globRef">
+                    <property name="toolTip">
+                     <string>RegEx match filename:  use (\d+) to replace a shot number. e.g. visar1_(\d+)_ref.img</string>
+                    </property>
+                    <property name="neutrinoSave" stdset="0">
+                     <bool>true</bool>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QLabel" name="label_3">
+                    <property name="text">
+                     <string>Shot:</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QLineEdit" name="globShot">
+                    <property name="toolTip">
+                     <string>RegEx match filename:  use (\d+) to replace a shot number. e.g. visar1_(\d+)_ref.img</string>
+                    </property>
+                    <property name="neutrinoSave" stdset="0">
+                     <bool>true</bool>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QToolButton" name="globRefresh">
+                    <property name="text">
+                     <string>...</string>
+                    </property>
+                    <property name="icon">
+                     <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+                      <normaloff>:/icons/autoRefresh.png</normaloff>:/icons/autoRefresh.png</iconset>
+                    </property>
+                   </widget>
+                  </item>
+                 </layout>
                 </widget>
                </item>
               </layout>
@@ -681,6 +766,10 @@
   <tabstop>DeghostCheck</tabstop>
   <tabstop>Deghost</tabstop>
   <tabstop>doWaveButton</tabstop>
+  <tabstop>globDir</tabstop>
+  <tabstop>globRef</tabstop>
+  <tabstop>globShot</tabstop>
+  <tabstop>globRefresh</tabstop>
   <tabstop>guess</tabstop>
   <tabstop>carrierPhys</tabstop>
   <tabstop>guessWeight</tabstop>
@@ -696,6 +785,7 @@
   <tabstop>physScale</tabstop>
  </tabstops>
  <resources>
+  <include location="../Ghost_fringes/GhostFringes.qrc"/>
   <include location="Visar.qrc"/>
   <include location="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc"/>
  </resources>
