--- a/plugins/Visar/Visar.ui
+++ b/plugins/Visar/Visar.ui
@@ -36,6 +36,15 @@
     <property name="bottomMargin">
      <number>4</number>
     </property>
+    <item row="1" column="0">
+     <widget class="QComboBox" name="comboShot">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+     </widget>
+    </item>
     <item row="0" column="0">
      <widget class="QTabWidget" name="tabs">
       <property name="sizeIncrement">
@@ -919,39 +928,6 @@
       </widget>
      </widget>
     </item>
-    <item row="1" column="0">
-     <widget class="QLineEdit" name="shotNumber">
-      <property name="font">
-       <font>
-        <pointsize>10</pointsize>
-       </font>
-      </property>
-      <property name="toolTip">
-       <string>Shot number (return to validate)</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignCenter</set>
-      </property>
-      <property name="neutrinoSave" stdset="0">
-       <bool>true</bool>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="0">
-     <widget class="QLabel" name="shotNumberLabel">
-      <property name="font">
-       <font>
-        <pointsize>10</pointsize>
-       </font>
-      </property>
-      <property name="toolTip">
-       <string>Shot number (return to validate)</string>
-      </property>
-      <property name="text">
-       <string>Shot #</string>
-      </property>
-     </widget>
-    </item>
    </layout>
   </widget>
   <widget class="QStatusBar" name="statusbar">
@@ -985,6 +961,7 @@
    <addaction name="actionRect3"/>
    <addaction name="actionAddVisar"/>
    <addaction name="actionDelVisar"/>
+   <addaction name="separator"/>
   </widget>
   <action name="actionSaveTxt">
    <property name="icon">
@@ -1109,7 +1086,6 @@
   <tabstop>etalon_dn_over_dlambda</tabstop>
   <tabstop>etalon_sensitivity</tabstop>
   <tabstop>tabVelocity</tabstop>
-  <tabstop>shotNumber</tabstop>
  </tabstops>
  <resources>
   <include location="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc"/>
