--- a/plugins/Monitor/Monitor.ui
+++ b/plugins/Monitor/Monitor.ui
@@ -30,9 +30,9 @@
     <item row="0" column="0">
      <widget class="QGroupBox" name="groupBox">
       <property name="title">
-       <string>Directory</string>
+       <string>Directory and pattern</string>
       </property>
-      <layout class="QGridLayout" name="gridLayout">
+      <layout class="QGridLayout" name="gridLayout" columnstretch="0,2,1">
        <property name="leftMargin">
         <number>2</number>
        </property>
@@ -45,6 +45,18 @@
        <property name="bottomMargin">
         <number>2</number>
        </property>
+       <item row="0" column="1">
+        <widget class="QLineEdit" name="lineEdit">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="neutrinoSave" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
        <item row="0" column="0">
         <widget class="QToolButton" name="changeDir">
          <property name="toolTip">
@@ -54,8 +66,8 @@
           <string>...</string>
          </property>
          <property name="icon">
-          <iconset>
-           <normaloff>:icons//loadPref.png</normaloff>:icons//loadPref.png</iconset>
+          <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+           <normaloff>:/icons/dir.png</normaloff>:/icons/dir.png</iconset>
          </property>
          <property name="iconSize">
           <size>
@@ -65,12 +77,15 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="1">
-        <widget class="QLineEdit" name="lineEdit">
+       <item row="0" column="2">
+        <widget class="QLineEdit" name="pattern">
          <property name="font">
           <font>
            <pointsize>10</pointsize>
           </font>
+         </property>
+         <property name="text">
+          <string>*.*</string>
          </property>
          <property name="neutrinoSave" stdset="0">
           <bool>true</bool>
@@ -111,6 +126,8 @@
    </property>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc"/>
+ </resources>
  <connections/>
 </ui>
