--- a/plugins/Monitor/Monitor.ui
+++ b/plugins/Monitor/Monitor.ui
@@ -47,7 +47,7 @@
     </item>
     <item row="0" column="0">
      <widget class="QWidget" name="widget" native="true">
-      <layout class="QGridLayout" name="gridLayout" columnstretch="0,0,1,0">
+      <layout class="QGridLayout" name="gridLayout" columnstretch="0,1,0,0">
        <property name="leftMargin">
         <number>0</number>
        </property>
@@ -60,36 +60,6 @@
        <property name="bottomMargin">
         <number>0</number>
        </property>
-       <item row="1" column="3">
-        <widget class="QCheckBox" name="erase">
-         <property name="font">
-          <font>
-           <pointsize>10</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string>Erase</string>
-         </property>
-         <property name="neutrinoSave" stdset="0">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="2">
-        <widget class="QLineEdit" name="pattern">
-         <property name="font">
-          <font>
-           <pointsize>10</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string>*.*</string>
-         </property>
-         <property name="neutrinoSave" stdset="0">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
        <item row="0" column="0">
         <widget class="QToolButton" name="changeDir">
          <property name="toolTip">
@@ -110,7 +80,19 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="1">
+       <item row="0" column="1" colspan="3">
+        <widget class="QLineEdit" name="lineEdit">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="neutrinoSave" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
         <widget class="QLabel" name="label">
          <property name="font">
           <font>
@@ -122,12 +104,45 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="1" colspan="3">
-        <widget class="QLineEdit" name="lineEdit">
+       <item row="1" column="1">
+        <widget class="QLineEdit" name="pattern">
          <property name="font">
           <font>
            <pointsize>10</pointsize>
           </font>
+         </property>
+         <property name="text">
+          <string>*.*</string>
+         </property>
+         <property name="neutrinoSave" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="2">
+        <widget class="QCheckBox" name="erase">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Erase</string>
+         </property>
+         <property name="neutrinoSave" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="3">
+        <widget class="QCheckBox" name="oneClick">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>1-Click</string>
          </property>
          <property name="neutrinoSave" stdset="0">
           <bool>true</bool>
