--- a/plugins/Visar/VisarSettings.ui
+++ b/plugins/Visar/VisarSettings.ui
@@ -296,9 +296,13 @@
                    <number>0</number>
                   </property>
                   <item>
-                   <widget class="QLabel" name="label">
+                   <widget class="QToolButton" name="globDirButton">
                     <property name="text">
-                     <string>Dir:</string>
+                     <string>...</string>
+                    </property>
+                    <property name="icon">
+                     <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+                      <normaloff>:/icons/dir.png</normaloff>:/icons/dir.png</iconset>
                     </property>
                    </widget>
                   </item>
