--- a/plugins/Function/Function.ui
+++ b/plugins/Function/Function.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>281</width>
-    <height>236</height>
+    <width>377</width>
+    <height>255</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -36,18 +36,42 @@
     <property name="bottomMargin">
      <number>4</number>
     </property>
-    <item row="3" column="0">
+    <item row="1" column="0">
      <widget class="QSpinBox" name="sb_height">
       <property name="font">
        <font>
         <pointsize>10</pointsize>
        </font>
       </property>
+      <property name="prefix">
+       <string>h: </string>
+      </property>
       <property name="minimum">
        <number>1</number>
       </property>
       <property name="maximum">
-       <number>9999</number>
+       <number>99999</number>
+      </property>
+      <property name="neutrinoSave" stdset="0">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0">
+     <widget class="QSpinBox" name="sb_width">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="prefix">
+       <string>w: </string>
+      </property>
+      <property name="minimum">
+       <number>1</number>
+      </property>
+      <property name="maximum">
+       <number>99999</number>
       </property>
       <property name="neutrinoSave" stdset="0">
        <bool>true</bool>
@@ -55,36 +79,29 @@
      </widget>
     </item>
     <item row="2" column="0">
-     <widget class="QLabel" name="label">
+     <widget class="QPlainTextEdit" name="function">
       <property name="font">
        <font>
         <pointsize>10</pointsize>
        </font>
       </property>
-      <property name="text">
-       <string>x</string>
+      <property name="toolTip">
+       <string>Use phys(num,x,y) to get an image value</string>
       </property>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QSpinBox" name="sb_width">
-      <property name="font">
-       <font>
-        <pointsize>10</pointsize>
-       </font>
-      </property>
-      <property name="minimum">
-       <number>1</number>
-      </property>
-      <property name="maximum">
-       <number>9999</number>
+      <property name="plainText">
+       <string># this is a comemnt
+# next is a variable declaration
+var xzero:=1500;
+var yzero:=300;
+# next is our function:
+sin(5*pi*x/width)*sin(5*pi*y/height)*phys(2,x,y)+img(x,y)/img(xzero,yzero)</string>
       </property>
       <property name="neutrinoSave" stdset="0">
        <bool>true</bool>
       </property>
      </widget>
     </item>
-    <item row="5" column="0">
+    <item row="3" column="0">
      <widget class="QWidget" name="widget" native="true">
       <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,0">
        <property name="leftMargin">
@@ -130,36 +147,6 @@
         </widget>
        </item>
       </layout>
-     </widget>
-    </item>
-    <item row="4" column="0">
-     <widget class="QPlainTextEdit" name="function">
-      <property name="font">
-       <font>
-        <pointsize>10</pointsize>
-       </font>
-      </property>
-      <property name="toolTip">
-       <string>Use phys(num,x,y) to get an image value</string>
-      </property>
-      <property name="plainText">
-       <string>sin(5*pi*x/width)*sin(5*pi*y/height)*phys(2,x,y)</string>
-      </property>
-      <property name="neutrinoSave" stdset="0">
-       <bool>true</bool>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="0">
-     <widget class="QLabel" name="label_2">
-      <property name="font">
-       <font>
-        <pointsize>10</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string> Size:</string>
-      </property>
      </widget>
     </item>
    </layout>
