--- a/UIs/nPreferences.ui
+++ b/UIs/nPreferences.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>480</width>
-    <height>506</height>
+    <width>448</width>
+    <height>497</height>
    </rect>
   </property>
   <property name="font">
@@ -49,18 +49,46 @@
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
-         <widget class="QCheckBox" name="separateRGB">
-          <property name="font">
-           <font>
-            <pointsize>10</pointsize>
-           </font>
-          </property>
-          <property name="text">
-           <string>Separate RGB images</string>
-          </property>
-          <property name="neutrinoSave" stdset="0">
-           <bool>true</bool>
-          </property>
+         <widget class="QWidget" name="widget_9" native="true">
+          <layout class="QHBoxLayout" name="horizontalLayout_7">
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="topMargin">
+            <number>0</number>
+           </property>
+           <property name="rightMargin">
+            <number>0</number>
+           </property>
+           <property name="bottomMargin">
+            <number>0</number>
+           </property>
+           <item>
+            <widget class="QCheckBox" name="separateRGB">
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
+             <property name="text">
+              <string>Separate RGB images</string>
+             </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QCheckBox" name="openNewWindow">
+             <property name="text">
+              <string>Open new window</string>
+             </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+          </layout>
          </widget>
         </item>
         <item>
@@ -91,7 +119,7 @@
            <item row="1" column="1">
             <widget class="QToolButton" name="lockScale">
              <property name="toolTip">
-              <string>lock scale forn newly opened images</string>
+              <string>lock scale for newly opened images</string>
              </property>
              <property name="text">
               <string>...</string>
@@ -112,7 +140,28 @@
            <item row="5" column="1">
             <widget class="QToolButton" name="lockBlur">
              <property name="toolTip">
-              <string>lock scale forn newly opened images</string>
+              <string>lock blur for newly opened images</string>
+             </property>
+             <property name="text">
+              <string>...</string>
+             </property>
+             <property name="icon">
+              <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+               <normaloff>:/icons/lockOpen.png</normaloff>
+               <normalon>:/icons/lockClose.png</normalon>:/icons/lockOpen.png</iconset>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="1">
+            <widget class="QToolButton" name="lockCrop">
+             <property name="toolTip">
+              <string>lock crop for newly opened images</string>
              </property>
              <property name="text">
               <string>...</string>
@@ -212,6 +261,27 @@
              <property name="icon">
               <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
                <normaloff>:/icons/autoRefresh.png</normaloff>:/icons/autoRefresh.png</iconset>
+             </property>
+            </widget>
+           </item>
+           <item row="7" column="1">
+            <widget class="QToolButton" name="lockColors">
+             <property name="toolTip">
+              <string>lock colors for newly opened images</string>
+             </property>
+             <property name="text">
+              <string>...</string>
+             </property>
+             <property name="icon">
+              <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+               <normaloff>:/icons/lockOpen.png</normaloff>
+               <normalon>:/icons/lockClose.png</normalon>:/icons/lockOpen.png</iconset>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>true</bool>
              </property>
             </widget>
            </item>
@@ -327,6 +397,13 @@
              </layout>
             </widget>
            </item>
+           <item row="7" column="0">
+            <widget class="QLabel" name="label_21">
+             <property name="text">
+              <string>Colors</string>
+             </property>
+            </widget>
+           </item>
            <item row="0" column="4">
             <widget class="QLineEdit" name="originX">
              <property name="toolTip">
@@ -383,6 +460,13 @@
              </property>
             </widget>
            </item>
+           <item row="6" column="0">
+            <widget class="QLabel" name="label_15">
+             <property name="text">
+              <string>Crop</string>
+             </property>
+            </widget>
+           </item>
            <item row="4" column="1">
             <widget class="QToolButton" name="lockMath">
              <property name="toolTip">
@@ -420,7 +504,7 @@
            <item row="0" column="1">
             <widget class="QToolButton" name="lockOrigin">
              <property name="toolTip">
-              <string>lock origin forn newly opened images</string>
+              <string>lock origin for newly opened images</string>
              </property>
              <property name="text">
               <string>...</string>
@@ -442,80 +526,6 @@
             <widget class="QLabel" name="label_14">
              <property name="text">
               <string>Blur</string>
-             </property>
-            </widget>
-           </item>
-           <item row="3" column="1">
-            <widget class="QToolButton" name="lockFlip">
-             <property name="toolTip">
-              <string>lock scale forn newly opened images</string>
-             </property>
-             <property name="text">
-              <string>...</string>
-             </property>
-             <property name="icon">
-              <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
-               <normaloff>:/icons/lockOpen.png</normaloff>
-               <normalon>:/icons/lockClose.png</normalon>:/icons/lockOpen.png</iconset>
-             </property>
-             <property name="checkable">
-              <bool>true</bool>
-             </property>
-             <property name="neutrinoSave" stdset="0">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="3" column="0">
-            <widget class="QLabel" name="label_flip">
-             <property name="font">
-              <font>
-               <pointsize>10</pointsize>
-              </font>
-             </property>
-             <property name="text">
-              <string>Flip</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="1">
-            <widget class="QToolButton" name="lockRotate">
-             <property name="toolTip">
-              <string>lock scale forn newly opened images</string>
-             </property>
-             <property name="text">
-              <string>...</string>
-             </property>
-             <property name="icon">
-              <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
-               <normaloff>:/icons/lockOpen.png</normaloff>
-               <normalon>:/icons/lockClose.png</normalon>:/icons/lockOpen.png</iconset>
-             </property>
-             <property name="checkable">
-              <bool>true</bool>
-             </property>
-             <property name="neutrinoSave" stdset="0">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="7">
-            <widget class="QLineEdit" name="originY">
-             <property name="toolTip">
-              <string>origin y</string>
-             </property>
-             <property name="text">
-              <string>0</string>
-             </property>
-             <property name="neutrinoSave" stdset="0">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="6" column="0">
-            <widget class="QLabel" name="label_15">
-             <property name="text">
-              <string>Crop</string>
              </property>
             </widget>
            </item>
@@ -601,10 +611,10 @@
              </layout>
             </widget>
            </item>
-           <item row="6" column="1">
-            <widget class="QToolButton" name="lockCrop">
+           <item row="3" column="1">
+            <widget class="QToolButton" name="lockFlip">
              <property name="toolTip">
-              <string>lock scale forn newly opened images</string>
+              <string>lock filp/transpose forn newly opened images</string>
              </property>
              <property name="text">
               <string>...</string>
@@ -619,6 +629,92 @@
              </property>
              <property name="neutrinoSave" stdset="0">
               <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="0">
+            <widget class="QLabel" name="label_flip">
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
+             <property name="text">
+              <string>Flip</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="1">
+            <widget class="QToolButton" name="lockRotate">
+             <property name="toolTip">
+              <string>lock rotate for newly opened images</string>
+             </property>
+             <property name="text">
+              <string>...</string>
+             </property>
+             <property name="icon">
+              <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+               <normaloff>:/icons/lockOpen.png</normaloff>
+               <normalon>:/icons/lockClose.png</normalon>:/icons/lockOpen.png</iconset>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="7">
+            <widget class="QLineEdit" name="originY">
+             <property name="toolTip">
+              <string>origin y</string>
+             </property>
+             <property name="text">
+              <string>0</string>
+             </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="7" column="4">
+            <widget class="QLineEdit" name="colorMin">
+             <property name="toolTip">
+              <string>Minimum display color</string>
+             </property>
+             <property name="text">
+              <string>0</string>
+             </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="7" column="7">
+            <widget class="QLineEdit" name="colorMax">
+             <property name="toolTip">
+              <string>Maximum display color</string>
+             </property>
+             <property name="text">
+              <string>1</string>
+             </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="7" column="8">
+            <widget class="QToolButton" name="getColors">
+             <property name="toolTip">
+              <string>get colors extremes from current image</string>
+             </property>
+             <property name="text">
+              <string>...</string>
+             </property>
+             <property name="icon">
+              <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+               <normaloff>:/icons/autoRefresh.png</normaloff>:/icons/autoRefresh.png</iconset>
              </property>
             </widget>
            </item>
@@ -1305,6 +1401,7 @@
  <tabstops>
   <tabstop>tabWidget</tabstop>
   <tabstop>separateRGB</tabstop>
+  <tabstop>openNewWindow</tabstop>
   <tabstop>lockOrigin</tabstop>
   <tabstop>originX</tabstop>
   <tabstop>originY</tabstop>
@@ -1325,6 +1422,15 @@
   <tabstop>lockBlur</tabstop>
   <tabstop>blurX</tabstop>
   <tabstop>blurY</tabstop>
+  <tabstop>lockCrop</tabstop>
+  <tabstop>cropW</tabstop>
+  <tabstop>cropH</tabstop>
+  <tabstop>cropDx</tabstop>
+  <tabstop>cropDy</tabstop>
+  <tabstop>lockColors</tabstop>
+  <tabstop>colorMin</tabstop>
+  <tabstop>colorMax</tabstop>
+  <tabstop>getColors</tabstop>
   <tabstop>comboIconSize</tabstop>
   <tabstop>fontFace</tabstop>
   <tabstop>fontSize</tabstop>
